# assimilate-openai

./: .gitignore  Makefile  README.md  chatbotCli.py  codeGenWebApp.py  imageGen.py  mkcode.py  pythonTutorCli.py  questionAnswerCLI.py  questionAnswerWebapp.py  quickstart.py  requirements.txt  test_oai_solutions.py  transcribeCLI.py
.devcontainer/: Dockerfile  devcontainer.json
chatbot/: Cargo.toml
chatbot/src/: chatbot.rs  main.rs
chatbot/tests/: test.rs
oalib/: solutions.py
openAIExamplesChatGPT/: fire-cli.py
openAIExamplesChatGPT/BashDockerfile/: Dockerfile  README.md
openai/: Cargo.toml
openai/src/: lib.rs  main.rs
rsummarize/: Cargo.toml
rsummarize/src/: lib.rs  main.rs
rust-curl-openai/: Cargo.toml
rust-curl-openai/src/: main.rs
streamlit-apps/: openAIPandas.py  openAIPandasHuggingFace.py  openaiHuggingFace.py  uberDemo.py
